--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 <body>
 <div class="container">
     <div class="row">
-        <div class="col">Col one</div>
-        <div class="col">Col two</div>  
+        <div class="col">Col one
+            <br>
+            <br>
+            <br>
+            <br>
+            colon one
+        </div>
+        <div class="col-sm-">Col two</div>  
     </div>
     
 </div>
