--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
             <br>
             colon one
         </div>
-        <div class="col-sm">Col two</div>  
+        <div class="col-sm">Col two
+            <br>
+            <br>
+            <br>
+            <br>
+            colon two
+        </div>  
     </div>
 
     <h1>H!</h1>
