--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <br>
             colon one
         </div>
-        <div class="col-sm-">Col two
+        <div class="col-sm">Col two
             <br>
             <br>
             <br>
