--- a/login_staff.html
+++ b/login_staff.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a href="#" class="navbar-brand">集聚科技</a>
+            <a href="#" class="navbar-brand">Kero</a>
         </div>
     </nav>
     
